--- a/projects/mfe-root/src/index.ejs
+++ b/projects/mfe-root/src/index.ejs
@@ -52,7 +52,8 @@
         "@single-spa/welcome": "https://unpkg.com/single-spa-welcome/dist/single-spa-welcome.js",
         "@mf/root-config": "//localhost:9000/mf-root-config.js",
         "@mf/mf-micro-1": "//localhost:8080/js/app.js",
-        "@mf/mf-micro-2": "//localhost:8081/js/app.js"
+        "@mf/mf-micro-2": "//localhost:8081/js/app.js",
+        "@mf/mf-micro-3-login": "//localhost:8082/js/app.js"
       }
     }
   </script>
